--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ h1{
   /* border: blue solid 1px; */
 
   overflow: hidden;
-  background-image: url(/Web/Pruebas/suculentas1/img/galeria2.jpg);
+  background-image: url(img/galeria2.jpg);
   background-size: cover;
   padding: 100px;
 
@@ -145,7 +145,7 @@ h1{
   /* border: blue solid 1px; */
 
   overflow: hidden;
-  background-image: url(/Web/Pruebas/suculentas1/img/galeria1.jpg);
+  background-image: url(img/galeria1.jpg);
   background-size: cover;
 
 }
@@ -155,7 +155,7 @@ h1{
 
   grid-column: 1/2;
   grid-row: 3/4;
-  background-image: url(/Web/Pruebas/suculentas1/img/galeria3.jpg);
+  background-image: url(img/galeria3.jpg);
   background-size: cover;
 
 }
@@ -165,7 +165,7 @@ h1{
 
   grid-column: 2/3;
   grid-row: 3/4;
-  background-image: url(/Web/Pruebas/suculentas1/img/galeria4.jpg);
+  background-image: url(img/galeria4.jpg);
   background-size: cover;
 
 }
