--- a/style.css
+++ b/style.css
@@ -101,20 +101,20 @@ h1{
   /* padding-top: 30px;
   padding-bottom: 30px; */
 
-  animation-name: galeria1;
+  /* animation-name: galeria1;
   animation-duration: 2s;
-  
+   */
   
 
 }
 
 
-/* @keyframes galeria1{
+@keyframes galeria1{
   from{width: 0%;
     height: 0%;}
   to{width: 80%;
     height: 900px;}
-} */
+} 
 
 
 .galeria1a{
@@ -176,5 +176,14 @@ h1{
 
   height: 300px;
   background: rgb(90, 133, 120);
+
+}
+
+.a{
+
+  background-color: rgb(90, 133, 120);
+  width: 100%;
+  height: 300px;
+
 
 }
